--- a/BooksDir/Views/Books/Create.cshtml
+++ b/BooksDir/Views/Books/Create.cshtml
@@ -1,4 +1,4 @@
-@model BooksDir.Models.Book
+@model BooksDir.Models.BookFormModel
 
 @{
     ViewData["Title"] = "Add New Book";
@@ -31,17 +31,19 @@
         <span asp-validation-for="Year" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="Author">Author:</label>
-        <input asp-for="Author" class="form-control" />
-        <span asp-validation-for="Author" class="text-danger"></span>
-    </div>
+  <div class="form-group">
+    <label asp-for="AuthorName">Author:</label>
+    <input asp-for="AuthorName" class="form-control" />
+    <span asp-validation-for="AuthorName" class="text-danger"></span>
+</div>
 
-    <div class="form-group">
-        <label asp-for="Genre">Genre:</label>
-        <input asp-for="Genre" class="form-control" />
-        <span asp-validation-for="Genre" class="text-danger"></span>
-    </div>
+<div class="form-group">
+    <label asp-for="GenreName">Genre:</label>
+    <input asp-for="GenreName" class="form-control" />
+    <span asp-validation-for="GenreName" class="text-danger"></span>
+</div>
+
+
 
     <button type="submit" class="btn btn-primary">Add Book</button>
 </form>
